test/files/type-resolver/errors/input-name.otest
name = "Invalid input name in function"
line = 2
character = 22
error = 'Invalid input name "squiggle" for function "sine".'

---

sine(frequency: 440, squiggle: 0)

---

name = "Invalid input name in user function"
line = 6
character = 6
error = 'Invalid input name "test" for function "func".'

---

func(input: 0) = {
    input
}

func(test: 1)

---

name = "Input name from surrounding function for sibling function"
line = 7
character = 11
error = 'Invalid input name "input" for function "func1".'

---

func(input: 0) = {
    func1(test: 1) = {
        test
    }

    func1(input: 2)
}

---

name = "Input name from surrounding function for distant scope"
line = 9
character = 18
error = 'Invalid input name "foo" for function "func".'

---

func(input: 0) = {
    input
}

func1(test: 1) = {
    func2(whee: 2) = {
        func3(foo: 3) = {
            func(foo: 4)
        }
    }
}

---

name = "Input name from distant scope for surrounding function"
line = 12
character = 15
error = 'Invalid input name "input" for function "func3".'

---

func(input: 0) = {
    input
}

func1(test: 1) = {
    func2(whee: 2) = {
        func3(foo: 3) = {
            foo
        }

        func3(input: 4)
    }
}
